--- a/sections/main-page.scss
+++ b/sections/main-page.scss
@@ -433,13 +433,8 @@
 	margin: 100px 0px;
 }
 .moviesSection {
-	padding: 0px 20px 0px 20px;
+	margin: 0px 20px 0px 20px;
 	.cardContainer {
-		// display: grid;
-		// grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-		// gap: 15px;
-		// justify-items: center;
-		// row-gap: 100px;
 		display: grid;
 		grid-auto-flow: column;
 		grid-auto-columns: minmax(300px, 1fr);
@@ -448,27 +443,21 @@
 		gap: 15px;
 		padding: 20px 0px;
 		.movieCard {
-			// display: grid;
-			// background-color: #101827;
-			// border-radius: 10px;
-			// overflow: hidden;
-			// height: 100%;
-			// width: 100%;
-			// transition: all 0.3s;
-			// padding-top: 20px;
 			border-radius: 20px;
 			overflow: hidden;
 			flex: 0 0 auto;
 			background-color: #101827;
+			transition: all 0.3s;
 			&:hover {
 				box-shadow: #ffb509 0px 0px 9px 4px;
 				scale: 1.03;
 			}
 			.moviesImg {
-				height: 50vh;
+				height: 40vh;
 				width: 100%;
 			}
 			.cardInfo {
+				user-select: none;
 				display: grid;
 				padding: 10px;
 				font-family: sans-serif;
@@ -477,6 +466,10 @@
 					color: white;
 					font-family: "Work Sans", sans-serif;
 					place-self: center;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					max-width: 98%;
 				}
 				.movieInfo {
 					display: flex;
